<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageLayout"
        android:background="@drawable/round_pink_background"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.53"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/title"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/description"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        android:orientation="horizontal">

        <RadioButton
            android:checked="true"
            android:id="@+id/signInRadioButton"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="60dp"
            android:background="@drawable/selected_radio_button_left"
            android:textColor="@drawable/selector_radio_button_text"
            android:button="@null"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:text="@string/sign_in"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/registerRadioButton"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="60dp"
            android:background="@drawable/selected_radio_button_right"
            android:textColor="@drawable/selector_radio_button_text"
            android:button="@null"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:text="@string/register"
            android:textSize="23sp"
            android:textStyle="bold"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>