<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/sign_up_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView">

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:hint="@string/id_hint"
            android:maxLines="1"
            android:textColorHint="@color/dark_grey"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pwLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/idLayout">

        <EditText
            android:id="@+id/pwEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:hint="@string/pw_hint"
            android:maxLines="1"
            android:textColorHint="@color/dark_grey"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/forgotPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_pw"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/pwLayout"
        app:layout_constraintTop_toBottomOf="@id/pwLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_pink_background"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPW" />

    <View
        android:id="@+id/leftGradationView"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/gradation_pink_left"
        app:layout_constraintBottom_toBottomOf="@id/signUpWithTextView"
        app:layout_constraintEnd_toStartOf="@id/signUpWithTextView"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signUpWithTextView" />

    <TextView
        android:id="@+id/signUpWithTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/or_sign_up_with"
        app:layout_constraintEnd_toStartOf="@id/rightGradationView"
        app:layout_constraintStart_toEndOf="@id/leftGradationView"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <View
        android:id="@+id/rightGradationView"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/gradation_pink_right"
        app:layout_constraintBottom_toBottomOf="@id/signUpWithTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUpWithTextView"
        app:layout_constraintTop_toTopOf="@id/signUpWithTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/googleLogoLayout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/signUpWithTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/facebookLogoLayout"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:background="@drawable/round_logo_background">

        <ImageView
            android:id="@+id/googleLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/google_logo"
            android:layout_margin="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facebookLogoLayout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@id/googleLogoLayout"
        app:layout_constraintTop_toTopOf="@id/googleLogoLayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/appleLogoLayout"
        android:background="@drawable/round_logo_background">

        <ImageView
            android:id="@+id/facebookLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/facbook"
            android:layout_margin="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appleLogoLayout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/facebookLogoLayout"
        app:layout_constraintStart_toEndOf="@id/facebookLogoLayout"
        android:background="@drawable/round_logo_background">

        <ImageView
            android:id="@+id/appleLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/group"
            android:layout_margin="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>